[gd_scene load_steps=32 format=3 uid="uid://henk88t1h8y2"]

[ext_resource type="Theme" uid="uid://bv3atmtrqii4a" path="res://Resources/Theme/luna.tres" id="1_1jk3b"]
[ext_resource type="Texture2D" uid="uid://6aal2onumy7s" path="res://Resources/Image/Desktop/default.tres" id="2_deyrj"]
[ext_resource type="Script" uid="uid://b2680156src04" path="res://Assets/UI/Computer/oobe.gd" id="3_deyrj"]
[ext_resource type="Texture2D" uid="uid://cd10lecgpielv" path="res://Resources/Image/UI/DownArrow.svg" id="4_b1gv2"]
[ext_resource type="Texture2D" uid="uid://cnlb1synj0mmp" path="res://Resources/Image/avatar/default.png" id="5_fl8u4"]
[ext_resource type="Texture2D" uid="uid://7yqunet0nhxt" path="res://Resources/Image/UI/Restore.svg" id="5_j1vce"]
[ext_resource type="Texture2D" uid="uid://cthrhf37hsxfd" path="res://Resources/Image/avatar/nonsense.png" id="6_i122j"]
[ext_resource type="Texture2D" uid="uid://b42cpv7543en7" path="res://Resources/Image/avatar/square.png" id="6_voeh1"]
[ext_resource type="Texture2D" uid="uid://dyc0pu15y7dmf" path="res://Resources/Image/avatar/circle.png" id="7_umv6y"]
[ext_resource type="Texture2D" uid="uid://b57r5ai30vq7u" path="res://Resources/Image/avatar/fall.png" id="7_voeh1"]
[ext_resource type="Texture2D" uid="uid://c7txxn60ct2kb" path="res://Resources/Image/avatar/line.png" id="8_8yh57"]
[ext_resource type="Texture2D" uid="uid://cn7nf82dmrt0k" path="res://Resources/Image/avatar/dream.png" id="8_umv6y"]
[ext_resource type="Texture2D" uid="uid://823eyu8tp6lb" path="res://Resources/Image/avatar/dog.png" id="9_ypwgg"]
[ext_resource type="Texture2D" uid="uid://bfygcjaaiu7nl" path="res://Resources/Image/avatar/piano.png" id="10_pd63v"]
[ext_resource type="Texture2D" uid="uid://b8aottue8k0p4" path="res://Resources/Image/avatar/keyboard.png" id="11_05lbc"]
[ext_resource type="Texture2D" uid="uid://dtcm2quadbvsh" path="res://Resources/Image/avatar/pen.png" id="12_qocph"]
[ext_resource type="Texture2D" uid="uid://cy8e25gqqmvtq" path="res://Resources/Image/avatar/mountain.png" id="13_05lbc"]
[ext_resource type="Texture2D" uid="uid://bm0dm4yref7uq" path="res://Resources/Image/avatar/cat.png" id="13_qocph"]
[ext_resource type="Texture2D" uid="uid://dbh2yd8w7npfc" path="res://Resources/Image/avatar/structure.png" id="15_hug7m"]

[sub_resource type="FontVariation" id="FontVariation_s1us0"]

[sub_resource type="SystemFont" id="SystemFont_ypevc"]
fallbacks = Array[Font]([SubResource("FontVariation_s1us0")])
font_names = PackedStringArray("SimSun", "Times New Roman")
font_italic = true
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_hug7m"]
fallbacks = Array[Font]([SubResource("FontVariation_s1us0")])
font_names = PackedStringArray("SimSun", "Times New Roman")
font_italic = true
subpixel_positioning = 0

[sub_resource type="FontVariation" id="FontVariation_p748u"]
base_font = SubResource("SystemFont_hug7m")
variation_embolden = 1.0
variation_transform = Transform2D(1, 0.25, 0, 1, 0, 0)

[sub_resource type="Gradient" id="Gradient_j1vce"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_p748u"]
gradient = SubResource("Gradient_j1vce")
width = 1080

[sub_resource type="Gradient" id="Gradient_kylj4"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3scdh"]
gradient = SubResource("Gradient_kylj4")
width = 4
fill_from = Vector2(1, 1)

[sub_resource type="InputEventAction" id="InputEventAction_deyrj"]
action = &"tab_left"

[sub_resource type="Shortcut" id="Shortcut_b1gv2"]
events = [SubResource("InputEventAction_deyrj")]

[sub_resource type="InputEventAction" id="InputEventAction_fl8u4"]
action = &"tab_right"

[sub_resource type="Shortcut" id="Shortcut_kylj4"]
events = [SubResource("InputEventAction_fl8u4")]

[node name="OOBE" type="TextureRect"]
offset_right = 1080.0
offset_bottom = 768.0
theme = ExtResource("1_1jk3b")
texture = ExtResource("2_deyrj")
script = ExtResource("3_deyrj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="UpBoard" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0, 0, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/UpBoard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0

[node name="OS" type="RichTextLabel" parent="VBoxContainer/UpBoard/MarginContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_ypevc")
theme_override_fonts/italics_font = SubResource("FontVariation_p748u")
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/italics_font_size = 50
bbcode_enabled = true
text = "os.name"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="UpLine" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
texture = SubResource("GradientTexture1D_p748u")

[node name="Contents" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="WelocmePage" type="VBoxContainer" parent="VBoxContainer/Contents"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Contents/WelocmePage"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 1, 0.49803922)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 50
text = "oobe.welcome"

[node name="SubText0" type="Label" parent="VBoxContainer/Contents/WelocmePage"]
layout_mode = 2
text = "oobe.welcome.0"

[node name="SubText1" type="Label" parent="VBoxContainer/Contents/WelocmePage"]
layout_mode = 2
text = "oobe.welcome.1"

[node name="OptionButton" type="Button" parent="VBoxContainer/Contents/WelocmePage"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"ButtonForMenu"
text = "English"
icon = ExtResource("4_b1gv2")
alignment = 0
icon_alignment = 2
expand_icon = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Contents/WelocmePage/OptionButton"]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -3589.0
grow_horizontal = 2
theme_type_variation = &"PanelLittleMenu"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Contents/WelocmePage/OptionButton/PanelContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 0
alignment = 2

[node name="EnglishButton" type="Button" parent="VBoxContainer/Contents/WelocmePage/OptionButton/PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"ButtonForListMenu"
text = "English"
alignment = 0

[node name="MandarinButton" type="Button" parent="VBoxContainer/Contents/WelocmePage/OptionButton/PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"ButtonForListMenu"
text = "‰∏≠Êñá"
alignment = 0

[node name="NextStepHint" type="Label" parent="VBoxContainer/Contents/WelocmePage"]
layout_mode = 2
size_flags_vertical = 10
text = "oobe.next_hint"

[node name="LocationPage" type="VBoxContainer" parent="VBoxContainer/Contents"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Contents/LocationPage"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 1, 0.49803922)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 50
text = "oobe.location"

[node name="SubText0" type="Label" parent="VBoxContainer/Contents/LocationPage"]
layout_mode = 2
text = "oobe.location.0"

[node name="SubText1" type="Label" parent="VBoxContainer/Contents/LocationPage"]
layout_mode = 2
text = "oobe.location.1"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Contents/LocationPage"]
layout_mode = 2

[node name="SavesLocation" type="Button" parent="VBoxContainer/Contents/LocationPage/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "C"
alignment = 0

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/Contents/LocationPage/HBoxContainer/SavesLocation"]
oversampling_override = 1.0
title = "Open a Directory"
initial_position = 2
size = Vector2i(750, 500)
cancel_button_text = "button.cancel"
file_mode = 2
access = 2
use_native_dialog = true

[node name="RestoreButton" type="Button" parent="VBoxContainer/Contents/LocationPage/HBoxContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
icon = ExtResource("5_j1vce")
expand_icon = true

[node name="SubText2" type="Label" parent="VBoxContainer/Contents/LocationPage"]
layout_mode = 2
text = "oobe.location.2"

[node name="NamePage" type="VBoxContainer" parent="VBoxContainer/Contents"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Contents/NamePage"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 1, 0.49803922)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 50
text = "oobe.name"

[node name="SubText0" type="Label" parent="VBoxContainer/Contents/NamePage"]
layout_mode = 2
text = "oobe.name.0"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Contents/NamePage"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 0
placeholder_text = "Anonymous"

[node name="SubText1" type="Label" parent="VBoxContainer/Contents/NamePage"]
layout_mode = 2
text = "oobe.name.1"

[node name="UID" type="Label" parent="VBoxContainer/Contents/NamePage"]
layout_mode = 2
size_flags_vertical = 10
text = "oobe.name.uid"

[node name="AvatarPage" type="VBoxContainer" parent="VBoxContainer/Contents"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Contents/AvatarPage"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 1, 0.49803922)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 50
text = "oobe.avatar"

[node name="SubText0" type="Label" parent="VBoxContainer/Contents/AvatarPage"]
layout_mode = 2
text = "oobe.avatar.0"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Contents/AvatarPage"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="MainAvatar" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("5_fl8u4")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_3scdh")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AvatarList" type="HFlowContainer" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="Default" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer/AvatarList"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("5_fl8u4")
expand_icon = true

[node name="Square" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer/AvatarList"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("6_voeh1")
expand_icon = true

[node name="Circle" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer/AvatarList"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("7_umv6y")
expand_icon = true

[node name="Line" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer/AvatarList"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("8_8yh57")
expand_icon = true

[node name="Piano" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer/AvatarList"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("10_pd63v")
expand_icon = true

[node name="Keyboard" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer/AvatarList"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("11_05lbc")
expand_icon = true

[node name="Pen" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer/AvatarList"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("12_qocph")
expand_icon = true

[node name="Dog" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer/AvatarList"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("9_ypwgg")
expand_icon = true

[node name="Cat" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer/AvatarList"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("13_qocph")
expand_icon = true

[node name="Mountain" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer/AvatarList"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("13_05lbc")
expand_icon = true

[node name="Structure" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer/AvatarList"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("15_hug7m")
expand_icon = true

[node name="Nonsense" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer/AvatarList"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("6_i122j")
expand_icon = true

[node name="Fall" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer/AvatarList"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("7_voeh1")
expand_icon = true

[node name="Dream" type="Button" parent="VBoxContainer/Contents/AvatarPage/HBoxContainer/ScrollContainer/AvatarList"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ButtonAvatarBase"
icon = ExtResource("8_umv6y")
expand_icon = true

[node name="FastBootPage" type="VBoxContainer" parent="VBoxContainer/Contents"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Contents/FastBootPage"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 1, 0.49803922)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 50
text = "oobe.fast_boot"

[node name="SubText0" type="Label" parent="VBoxContainer/Contents/FastBootPage"]
layout_mode = 2
text = "oobe.fast_boot.0"

[node name="YesButton" type="Button" parent="VBoxContainer/Contents/FastBootPage"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Contents/FastBootPage/YesButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="Label" parent="VBoxContainer/Contents/FastBootPage/YesButton/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "üêá"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Contents/FastBootPage/YesButton/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
text = "oobe.fast_boot.yes"
flat = true

[node name="NoButton" type="Button" parent="VBoxContainer/Contents/FastBootPage"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Contents/FastBootPage/NoButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="Label" parent="VBoxContainer/Contents/FastBootPage/NoButton/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "üêå"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Contents/FastBootPage/NoButton/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
text = "oobe.fast_boot.no"
flat = true

[node name="ReadyPage" type="VBoxContainer" parent="VBoxContainer/Contents"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Contents/ReadyPage"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 1, 0.49803922)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 50
text = "oobe.ready"

[node name="SubText0" type="Label" parent="VBoxContainer/Contents/ReadyPage"]
layout_mode = 2
size_flags_vertical = 3
text = "oobe.ready.0"

[node name="SubText1" type="Label" parent="VBoxContainer/Contents/ReadyPage"]
layout_mode = 2
text = "oobe.ready.1"

[node name="SubText2" type="Label" parent="VBoxContainer/Contents/ReadyPage"]
layout_mode = 2
text = "oobe.ready.2"

[node name="SubText3" type="Label" parent="VBoxContainer/Contents/ReadyPage"]
layout_mode = 2
text = "oobe.ready.3"

[node name="DownLine" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
texture = SubResource("GradientTexture1D_p748u")

[node name="DownBoard" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
color = Color(0, 0, 1, 1)

[node name="PageButton" type="MarginContainer" parent="VBoxContainer/DownBoard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/DownBoard/PageButton"]
layout_mode = 2

[node name="PreviousIcon" type="Button" parent="VBoxContainer/DownBoard/PageButton/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
theme_type_variation = &"ButtonRed"
shortcut = SubResource("Shortcut_b1gv2")
text = "ü¢Ä"

[node name="PreviousText" type="LinkButton" parent="VBoxContainer/DownBoard/PageButton/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
text = "button.previous_step"
underline = 1

[node name="Control" type="Control" parent="VBoxContainer/DownBoard/PageButton/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextText" type="LinkButton" parent="VBoxContainer/DownBoard/PageButton/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "button.next_step"
underline = 1

[node name="NextIcon" type="Button" parent="VBoxContainer/DownBoard/PageButton/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
theme_type_variation = &"ButtonGreen"
shortcut = SubResource("Shortcut_kylj4")
text = "ü°∫"

[node name="PauseScreen" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.49803922)

[node name="Label" type="Label" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "oobe.paused"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="VBoxContainer/Contents/WelocmePage/OptionButton" to="." method="match_language"]
[connection signal="mouse_exited" from="VBoxContainer/Contents/WelocmePage/OptionButton" to="." method="match_language"]
[connection signal="pressed" from="VBoxContainer/Contents/WelocmePage/OptionButton" to="." method="_on_language_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Contents/WelocmePage/OptionButton/PanelContainer" to="." method="_on_language_panel_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Contents/WelocmePage/OptionButton/PanelContainer" to="." method="_on_language_panel_exited"]
[connection signal="pressed" from="VBoxContainer/Contents/WelocmePage/OptionButton/PanelContainer/VBoxContainer/EnglishButton" to="." method="_on_english_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Contents/WelocmePage/OptionButton/PanelContainer/VBoxContainer/MandarinButton" to="." method="_on_mandarin_button_pressed"]
[connection signal="visibility_changed" from="VBoxContainer/Contents/LocationPage" to="." method="_on_location_page_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Contents/LocationPage/HBoxContainer/SavesLocation" to="." method="_on_saves_location_pressed"]
[connection signal="dir_selected" from="VBoxContainer/Contents/LocationPage/HBoxContainer/SavesLocation/FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="pressed" from="VBoxContainer/Contents/LocationPage/HBoxContainer/RestoreButton" to="." method="_on_file_path_restore_button_pressed"]
[connection signal="visibility_changed" from="VBoxContainer/Contents/NamePage" to="." method="_on_name_page_visibility_changed"]
[connection signal="text_changed" from="VBoxContainer/Contents/NamePage/LineEdit" to="." method="_on_user_name_text_changed"]
[connection signal="visibility_changed" from="VBoxContainer/Contents/AvatarPage" to="." method="_on_avatar_page_visibility_changed"]
[connection signal="visibility_changed" from="VBoxContainer/Contents/FastBootPage" to="." method="_on_fast_boot_page_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Contents/FastBootPage/YesButton" to="." method="_on_fast_boot_yes_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Contents/FastBootPage/NoButton" to="." method="_on_fast_boot_no_button_pressed"]
[connection signal="pressed" from="VBoxContainer/DownBoard/PageButton/HBoxContainer/PreviousIcon" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="VBoxContainer/DownBoard/PageButton/HBoxContainer/PreviousText" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="VBoxContainer/DownBoard/PageButton/HBoxContainer/NextText" to="." method="_on_next_pressed"]
[connection signal="pressed" from="VBoxContainer/DownBoard/PageButton/HBoxContainer/NextIcon" to="." method="_on_next_pressed"]
